// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Protection Paladin Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Protection Paladin Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Protection Paladin Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt=""
            className="icon"
            src="//render-us.worldofwarcraft.com/icons/56/spell_mage_altertime.jpg"
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Downtime
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Downtime is available time not used to cast anything (including not having your GCD rolling). This can be caused by delays between casting spells, latency, cast interrupting or just simply not casting anything (e.g. due to movement/stunned).<br/>
        <li>You spent <b>65.23%</b> of your time casting something.</li>
        <li>You spent <b>34.77%</b> of your time casting nothing at all.</li>
        "
            >
              34.77 %
            </dfn>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel-footer"
      style={
        Object {
          "borderTop": 0,
          "overflow": "hidden",
          "padding": 0,
        }
      }
    >
      <div
        className="statistic-bar"
      >
        <div
          className="stat-health-bg"
          data-tip="You spent <b>65.23%</b> of your time casting something."
          style={
            Object {
              "width": "65.22732602595921%",
            }
          }
        >
          <img
            alt="Active time"
            src="/img/sword.png"
          />
        </div>
        <div
          className="remainder DeathKnight-bg"
          data-tip="You spent <b>34.77%</b> of your time casting nothing at all."
        >
          <img
            alt="Downtime"
            src="/img/afk.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_mage_altertime",
    "importance": "minor",
    "issue": <React.Fragment>
      Your downtime can be improved. Try to cast more, for example by reducing the delay between casting spells. Even if you have to move, try to cast something instant with range like 
      <SpellLink
        icon={true}
        id={20271}
      />
       or 
      <SpellLink
        icon={true}
        id={31935}
      />
      .
    </React.Fragment>,
    "stat": <React.Fragment>
      34.77% downtime
       (
      &lt;20.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Protection Paladin Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Protection Paladin Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Protection Paladin Analyzer analyzers Consecration matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=26573"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/spell_holy_innerfire.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Hits Mitigated w/ Consecration
          </div>
          <div
            className="value"
          >
            70.90 %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers Consecration matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_holy_innerfire",
    "importance": "major",
    "issue": "Your Consecration usage can be improved. Maintain it to reduce all incoming damage and refresh it during rotational downtime.",
    "stat": <React.Fragment>
      70.90% of hits were mitigated by Consecration 
       (
      &gt;95.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Protection Paladin Analyzer analyzers DamageDone matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt="Sword"
            src="/img/sword.png"
            style={
              Object {
                "border": 0,
              }
            }
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Damage done
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Total damage done: <b>1,696,522</b> "
            >
              5,248 DPS
            </dfn>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers DamageDone matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers DamageTaken matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt="Shield"
            src="/img/shield.png"
            style={
              Object {
                "border": 0,
              }
            }
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Damage taken
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="The total damage taken was 3,909,576 (0 overkill)."
            >
              12k DTPS
            </dfn>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel-footer"
      style={
        Object {
          "borderTop": 0,
          "overflow": "hidden",
          "padding": 0,
        }
      }
    >
      <div
        className="statistic-bar"
        data-tip="Damage taken by type:
      <ul>
      <li><b>Physical</b>: 1,189,673 (30.43%)</li>
      <li><b>Magic</b>: 2,719,903 (69.57%)</li>
      </ul>
      Damage taken by magic school:
      <ul>
        <li><b>Physical</b>: 1,189,673 (30.43%)</li><li><b>Nature</b>: 2,523,545 (64.55%)</li><li><b>Shadow</b>: 196,358 (5.02%)</li>
      </ul>
      Click the bar to switch between simple and detailed mode."
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className="spell-school-1-bg"
          style={
            Object {
              "width": "30.429719232980762%",
            }
          }
        />
        <div
          className="spell-school-32-bg"
          style={
            Object {
              "width": "69.57028076701923%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers DamageTaken matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers GrandCrusader matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=85043"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/inv_helmet_74.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Grand Crusader
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Grand Crusader reset the cooldown of Avenger's Shield at least 11 times. 11 are inferred from using it before its cooldown normally be up.<br/>
            You had 83 chances for Grand Crusader to trigger with a 15% chance to trigger."
            >
              11 Resets
            </dfn>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        />
      </div>
      <div
        className="statistic-expansion-button-holster"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-chevron-down"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers GrandCrusader matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers HammerOfTheRighteous matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Protection Paladin Analyzer analyzers HammerOfTheRighteous matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_paladin_hammeroftherighteous",
    "importance": "major",
    "issue": <React.Fragment>
      You should avoid casting 
      <SpellLink
        icon={true}
        id={53595}
      />
       while better spells (namely 
      <SpellLink
        icon={true}
        id={275779}
      />
       and 
      <SpellLink
        icon={true}
        id={31935}
      />
      ) are available. This is a 
      <em>
        filler
      </em>
       ability and should only be used when you have no better spells to cast.
    </React.Fragment>,
    "stat": <React.Fragment>
      29.58% of casts while better spells were available
       (
      &lt; 10.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Protection Paladin Analyzer analyzers HealingDone matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <img
            alt="Healing"
            src="/img/healing.png"
            style={
              Object {
                "border": 0,
              }
            }
          />
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Healing done
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Total healing done: <b>1,478,097</b>"
            >
              4,572 HPS
            </dfn>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel-footer"
      style={
        Object {
          "borderTop": 0,
          "overflow": "hidden",
          "padding": 0,
        }
      }
    >
      <div
        className="statistic-bar"
      >
        <div
          className="stat-healing-bg"
          data-tip="Regular healing done, not including absorbs. You did a total of 889k regular healing (58.40% of raw healing)."
          style={
            Object {
              "width": "58.404904830229796%",
            }
          }
        >
          <img
            alt="Healing"
            src="/img/healing.png"
          />
        </div>
        <div
          className="stat-healing-absorbs-bg"
          data-tip="Healing by absorbs. This only includes damage prevented by absorbs. You did a total of 461k healing with absorbs (30.33% of raw healing)."
          style={
            Object {
              "width": "30.327144236476126%",
            }
          }
        >
          <img
            alt="Absorb Healing"
            src="/img/absorbed.png"
          />
        </div>
        <div
          className="stat-negative-absorbs-bg"
          data-tip="Absorbed healing. This only includes healing that gets absorbed by debuffs. You had a total of 128k healing absorbed (8.42% of raw healing)."
          style={
            Object {
              "width": "8.419200506888544%",
            }
          }
        >
          <img
            alt="Absorbed Healing"
            src="/img/negative-absorbed.png"
          />
        </div>
        <div
          className="remainder stat-overhealing-bg"
          data-tip="Overhealing. You did a total of 43k overhealing (2.85 % of raw healing). Overhealing can be caused by playing poorly such as selecting the wrong targets or casting abilities at the wrong time, other healers sniping, and/or bringing too many healers."
        >
          <img
            alt="Overhealing"
            src="/img/overhealing.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers HealingDone matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers InspiringVanguard matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers InspiringVanguard matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers Judgment matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=53600"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Effective SotR CDR
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Your Judgment casts reduced the cooldown of Shield of the Righteous by <b>106s</b> over 44 casts, 12 of which were critical strikes.
            <br/>
            You wasted <b>0s</b> of cooldown reduction."
            >
              24.69%
            </dfn>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers Judgment matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers LightOfTheProtector matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Protection Paladin Analyzer analyzers LightOfTheProtector matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_paladin_lightoftheprotector",
    "importance": "minor",
    "issue": <React.Fragment>
      You should delay your 
      <SpellLink
        icon={true}
        id={184092}
      />
       cast as little as possible after being hit to maximize its effect and to minimize the chance that you waste healing resources.
    </React.Fragment>,
    "stat": <React.Fragment>
      1.73s Average Delay
       (
      &lt; 1.50s is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Protection Paladin Analyzer analyzers LightOfTheProtectorTiming matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Protection Paladin Analyzer analyzers LightOfTheProtectorTiming matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers MitigationCheck matches the statistic snapshot 1`] = `null`;

exports[`The Protection Paladin Analyzer analyzers MitigationCheck matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer analyzers RighteousProtector matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers RighteousProtector matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers Seraphim matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers Seraphim matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Protection Paladin Analyzer analyzers ShieldOfTheRighteous matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="panel statistic-box expandable "
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub statistic-icon"
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <a
            href="http://wowhead.com/spell=53600"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main"
          style={
            Object {
              "paddingLeft": 16,
              "position": "relative",
            }
          }
        >
          <div
            className="slabel"
          >
            Physical damage mitigated
          </div>
          <div
            className="value"
          >
            <dfn
              data-tip="Shield of the Righteous usage breakdown:
            <ul>
                <li>You were hit <b>20</b> times with your Shield of the Righteous buff (<b>364,724</b> damage).</li>
                <li>You were hit <b>26</b> times <b><i>without</i></b> your Shield of the Righteous buff (<b>824,949</b> damage).</li>
            </ul>
            <b>43.48%</b> of physical attacks were mitigated with Shield of the Righteous (<b>30.66%</b> of physical damage taken).<br/>
            <b>11</b> of your 32 casts were <em>good</em> (blocked at least 2 melees or a tankbuster, or prevented capping charges)."
            >
              30.66%
            </dfn>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Protection Paladin Analyzer analyzers ShieldOfTheRighteous matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_paladin_shieldofvengeance",
    "importance": "major",
    "issue": <React.Fragment>
      34.38
      % of your 
      <SpellLink
        icon={true}
        id={53600}
      />
       casts were 
      <em>
        good
      </em>
       (they mitigated at least 2 auto-attacks or 1 tankbuster, or prevented capping charges). You should have Shield of the Righteous up to mitigate as much physical damage as possible.
    </React.Fragment>,
    "stat": <React.Fragment>
      34.38% good Shield of the Righteous casts
       (
      90% or more is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Protection Paladin Analyzer analyzers SpellUsable matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Protection Paladin Analyzer analyzers SpellUsable matches the suggestions snapshot 1`] = `Array []`;

exports[`The Protection Paladin Analyzer should match the checklist snapshot 1`] = `
<div
  className="checklist"
>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "red",
                }
              }
              viewBox="15 15 70 70"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  Object {
                    "strokeLinecap": "round",
                    "strokeMiterlimit": 10,
                    "strokeWidth": 10,
                  }
                }
              >
                <line
                  x1="21.19"
                  x2="78.81"
                  y1="21.19"
                  y2="78.81"
                />
                <line
                  x1="78.81"
                  x2="21.19"
                  y1="21.19"
                  y2="78.81"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Use core abilities as often as possible.
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#df7102",
                  "transition": "background-color 800ms",
                  "width": "42.27989489474303%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              These should generally always be recharging to maximize efficiency.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=53600"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
                />
                 
                Shield of the Righteous
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                95.37%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=31935"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_holy_avengersshield.jpg"
                />
                 
                Avenger's Shield
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                79.85%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#df7102",
                      "transition": "background-color 800ms",
                      "width": "49.444846722085664%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=275779"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_holy_righteousfury.jpg"
                />
                 
                Judgment
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                65.55%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#df7102",
                      "transition": "background-color 800ms",
                      "width": "35.1149430674004%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Bad 
              <a
                href="http://wowhead.com/spell=53595"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_hammeroftherighteous.jpg"
                />
                 
                Hammer of the Righteous
              </a>
               casts
            </div>
            <div
              className="flex-sub"
              style={
                Object {
                  "marginLeft": 10,
                }
              }
            >
              <svg
                data-tip="This is a <em>filler</em> ability and should only be cast while your other spells are on cooldown."
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                />
                <path
                  d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                />
                <path
                  d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                />
              </svg>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                29.58%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "28.146428571428572%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "red",
                }
              }
              viewBox="15 15 70 70"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  Object {
                    "strokeLinecap": "round",
                    "strokeMiterlimit": 10,
                    "strokeWidth": 10,
                  }
                }
              >
                <line
                  x1="21.19"
                  x2="78.81"
                  y1="21.19"
                  y2="78.81"
                />
                <line
                  x1="78.81"
                  x2="21.19"
                  y1="21.19"
                  y2="78.81"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Mitigate incoming damage with 
          <a
            href="http://wowhead.com/spell=53600"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
            />
             
            Shield of the Righteous
          </a>
           and 
          <a
            href="http://wowhead.com/spell=26573"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/spell_holy_innerfire.jpg"
            />
             
            Consecration
          </a>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "transition": "background-color 800ms",
                  "width": "24.294193097014926%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Maintain 
              <a
                href="http://wowhead.com/spell=26573"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_holy_innerfire.jpg"
                />
                 
                Consecration
              </a>
               to reduce all incoming damage by a flat amount and use it as a rotational filler if necessary.
              <br />
              Use 
              <a
                href="http://wowhead.com/spell=53600"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
                />
                 
                Shield of the Righteous
              </a>
               to smooth out your physical damage taken or weave them into your rotation when you're about to cap charges. 
              <a
                href="http://wowhead.com/spell=31850"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_holy_ardentdefender.jpg"
                />
                 
                Ardent Defender
              </a>
               can be used either as a cooldown to mitigate boss abilities or to cover time when 
              <a
                href="http://wowhead.com/spell=53600"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
                />
                 
                Shield of the Righteous
              </a>
               is unavailable.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=53600"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
                />
                 
                Shield of the Righteous
              </a>
               cast efficiency
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                95.37%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Good 
              <a
                href="http://wowhead.com/spell=53600"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_shieldofvengeance.jpg"
                />
                 
                Shield of the Righteous
              </a>
               casts
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                34.38%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "19.078125%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Hits Mitigated with 
              <a
                href="http://wowhead.com/spell=26573"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_holy_innerfire.jpg"
                />
                 
                Consecration
              </a>
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                70.90%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "29.51026119402985%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=31850"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/spell_holy_ardentdefender.jpg"
                />
                 
                Ardent Defender
              </a>
               cast efficiency
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                0.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "red",
                }
              }
              viewBox="15 15 70 70"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  Object {
                    "strokeLinecap": "round",
                    "strokeMiterlimit": 10,
                    "strokeWidth": 10,
                  }
                }
              >
                <line
                  x1="21.19"
                  x2="78.81"
                  y1="21.19"
                  y2="78.81"
                />
                <line
                  x1="78.81"
                  x2="21.19"
                  y1="21.19"
                  y2="78.81"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Use 
          <a
            href="http://wowhead.com/spell=184092"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon"
              src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_lightoftheprotector.jpg"
            />
             
            Light of the Protector
          </a>
           to heal yourself
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "transition": "background-color 800ms",
                  "width": "64.60854433628127%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Using 
              <a
                href="http://wowhead.com/spell=184092"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_lightoftheprotector.jpg"
                />
                 
                Light of the Protector
              </a>
               to heal yourself is critical to tanking effectively. You should aim to cast it as much as possible without overhealing. It is also important to avoid delaying the cast because this may result in "sniping" a healer's cast, causing it to overheal and wasting resources.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              <a
                href="http://wowhead.com/spell=184092"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt=""
                  className="icon"
                  src="//render-us.worldofwarcraft.com/icons/56/ability_paladin_lightoftheprotector.jpg"
                />
                 
                Light of the Protector
              </a>
               Cast Efficiency
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                12.27%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "9.07703300884381%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Avg. Cast Delay
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                1.73s
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#a6c34c",
                      "transition": "background-color 800ms",
                      "width": "84.7486%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Overhealing
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                0.00%
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="expandable "
  >
    <div
      className="meta checklist-item"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div
            className="chevron"
          >
            <svg
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "paddingRight": 18,
            }
          }
        >
          <div>
            <svg
              style={
                Object {
                  "color": "red",
                }
              }
              viewBox="15 15 70 70"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  Object {
                    "strokeLinecap": "round",
                    "strokeMiterlimit": 10,
                    "strokeWidth": 10,
                  }
                }
              >
                <line
                  x1="21.19"
                  x2="78.81"
                  y1="21.19"
                  y2="78.81"
                />
                <line
                  x1="78.81"
                  x2="21.19"
                  y1="21.19"
                  y2="78.81"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="flex-main"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub content-middle"
          style={
            Object {
              "width": 100,
            }
          }
        >
          <div
            className="performance-bar-container"
          >
            <div
              className="performance-bar small"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "transition": "background-color 800ms",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="details"
      style={
        Object {
          "display": "none",
          "minHeight": 80,
          "paddingLeft": 65,
          "paddingRight": 65,
          "position": "relative",
        }
      }
    >
      <div
        className="row"
        style={
          Object {
            "marginBottom": 10,
            "position": "relative",
          }
        }
      >
        <svg
          className="text-muted"
          style={
            Object {
              "fontSize": "2em",
              "left": -33,
              "position": "absolute",
              "top": "50%",
              "transform": "translateY(-33%)",
            }
          }
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
          />
          <path
            d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
          />
          <path
            d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
          />
        </svg>
        <div
          className="col-md-12 text-muted"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              All items enchanted
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                3
                 
                / 3
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Using high quality enchants
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                3
                 
                / 3
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#4ec04e",
                      "transition": "background-color 800ms",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Used a pre-potion
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                No
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Used a second potion
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                No
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Flask used
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                No
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              High quality food used
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                No
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="flex"
          >
            <div
              className="flex-main"
            >
              Food used
            </div>
            <div
              className="flex-sub content-middle text-muted"
              style={
                Object {
                  "marginLeft": 5,
                  "marginRight": 10,
                  "minWidth": 55,
                }
              }
            >
              <div
                className="text-right"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              >
                 
                No
                 
                 
              </div>
            </div>
            <div
              className="flex-sub content-middle"
              style={
                Object {
                  "width": 50,
                }
              }
            >
              <div
                className="performance-bar-container"
              >
                <div
                  className="performance-bar small"
                  style={
                    Object {
                      "backgroundColor": "#ac1f39",
                      "transition": "background-color 800ms",
                      "width": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
